# CS470_IAI_2023_Spring

./: README.md
assignment_1/: mlp_problem.ipynb
assignment_2/: CNN_problem_1.ipynb  CNN_problem_2.ipynb  CNN_problem_3.ipynb
assignment_3/: RL_assignment3_problem.ipynb
assignment_5/: .gitignore  README.md  robot.sh
assignment_5/src/py_astar_planner/: CMakeLists.txt  bgp_plugin.xml  package.xml  setup.py
assignment_5/src/py_astar_planner/include/py_astar_planner/: py_astar_planner.h
assignment_5/src/py_astar_planner/launch/: move_base.launch  turtlebot3_navigation.launch
assignment_5/src/py_astar_planner/maps/: map.pgm
assignment_5/src/py_astar_planner/rviz/: turtlebot3_navigation.rviz
assignment_5/src/py_astar_planner/src/: py_astar_planner.cpp
assignment_5/src/py_astar_planner/src/py_astar_planner/: astar.py  dijkstra.py  map.txt  planner.py
tutorial_1/: MLP_tutorial_quiz_problem.ipynb  cs470_tutorial_1_1.ipynb  cs470_tutorial_1_2.ipynb  cs470_tutorial_1_3.ipynb
tutorial_2/: RL_tutorial.ipynb  tutorial2_quiz.ipynb
tutorial_3/: README.md  README_ROS.md  README_TURTLEBOT.md  ros_parameter.py  service_client.py  service_server.py  talker.py
